# tracking_agent

./: .gitignore  AGENTS.md  README.md  active_session.json  doc  pyproject.toml  requirements.txt  test_robot_stream.py
.omx/: metrics.json
.playwright-cli/: page-2026-03-31T08-13-41-257Z.yml  page-2026-03-31T08-13-42-076Z.yml
agent/: __init__.py  config.py  e_agent.py  pi_protocol.py  project_paths.py  route_context.py  runner.py  runtime_cli.py  session.py  session_store.py  skill_payload.py  voice_input.py  windows_console_input.py
backend/: README.md  __init__.py  agent_viewer_stream.py  cli.py  describe_image.py  feishu.py  llm_client.py  runner.py  runtime_apply.py  runtime_session.py  session_frames.py  skill_payload.py  skills.py  tracking_viewer_stream.py  tts.py  web_search.py
capabilities/: __init__.py
docs/: agent-architecture.md  agent-runtime-report.html  agent-runtime-report.md  code-change-summary-vs-original.md  embodied-agent-architecture-report.html  embodied-harness.diagram.json  open-source-agent-kernel-report.html  pi-models.dashscope.example.json  tracking-benchmark-2026-04-04.md  tracking-benchmark-2026-04-06-boundreview.md  tracking-benchmark-2026-04-10-qwen35flash.md  tracking-no-reason-benchmark-2026-04-11.md  tracking-no-reason-experiment-2026-04-10.md  tracking-paper-comparison-table-2026-04-10.md  tracking-paper-vs-local-results.md  tracking-realtime-e2e-test-2026-04-09.md  tracking-rebind-strategy-2026-04-05.md  tracking-runtime-minimal-flow.md  tracking-service-benchmark-2026-04-05-room.md  tracking-single-turn-latency-2026-04-10.md  tracking-skill-report.html  tracking-three-sequence-comparison-cn.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
interfaces/: __init__.py
scaffold/: __init__.py
scripts/: e_agent.py  perception_cli.py  run_perception.py  run_tracking_agent.py  run_tracking_backend.py  run_tracking_frontend.sh  run_tracking_loop.py  run_tracking_perception.py  run_tracking_stack.py  run_tracking_stack.sh  run_tracking_viewer_stream.py  runtime_cli.py  server_start.sh  server_stop.sh  server_watch.sh  write_environment.py
skills/: __init__.py  catalog.py
stt/: __init__.py  audio_sampler.py  runtime_config.py  streaming_asr.py  utils.py  vad_asr_client.py
terminal/: package-lock.json  package.json  pi_agent_tui.mjs
tests/: test_agent_session_store.py  test_backend_api.py  test_backend_store.py  test_cli_surface.py  test_cloud_agent.py  test_config.py  test_dashscope_tracking_backend.py  test_detection_visualization.py  test_memory_format.py  test_output_validator.py  test_perception_recorder.py  test_pi_agent_adapter.py  test_pi_agent_core.py  test_pi_agent_loop.py  test_pi_agent_runner.py  test_pi_backend_bridge.py  test_pi_host_turn.py  test_robot_stream.py  test_run_host_agent_cli.py  test_run_robot_stream_cli.py  test_runtime_state.py  test_scaffold_bbox_inference.py  test_scaffold_benchmark.py  test_scaffold_query_plan.py  test_server_scripts.py  test_service_urls.py  test_session_store.py  test_skill_catalog.py  test_skill_layout.py  test_skill_prompts.py  test_streaming_asr.py  test_target_crop.py  test_tracking_agent.py  test_tracking_benchmark.py  test_tracking_effects.py  test_tracking_rewrite_memory.py  test_tracking_select.py  test_tracking_stop_skill.py  test_tracking_triggers.py  test_voice_input.py
tracking_agent/: README.md  __init__.py  backend_api.py  backend_store.py  benchmark_tracking.py  cloud_agent.py  config.py  (+14 more)
(+317 files in other folders)
