[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-agent-runtime"
version = "0.1.0"
description = "Pi-integrated runtime kernel for perception, tracking, and skill-side capability commands."
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
  "Pillow>=10.0,<12.0",
  "ultralytics>=8.2,<9.0",
  "lap>=0.5.12",
  "opencv-python==4.9.0.80",
  "numpy<2",
  "torch==2.2.2",
  "torchvision==0.17.2",
  "openai>=1.0,<2.0",
  "websockets>=12,<16",
]

[project.scripts]
e-agent = "scripts.e_agent:main"
robot-agent = "scripts.runtime_cli:main"
robot-agent-perception = "scripts.perception_cli:main"
robot-agent-environment-writer = "world.perception.write_environment:main"
robot-agent-tracking-stack = "scripts.run_tracking_stack:main"
robot-agent-tracking-loop = "capabilities.tracking.loop:main"
robot-agent-tracking-viewer-stream = "interfaces.viewer.stream:main"

[dependency-groups]
dev = [
  "pytest>=7.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "world*", "capabilities*", "interfaces*", "skills*", "scripts*"]

[tool.uv]
default-groups = ["dev"]
