[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-agent-runtime"
version = "0.1.0"
description = "Pi-integrated runtime kernel for perception, tracking, and skill-side capability commands."
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
  "Pillow>=10.0,<12.0",
  "ultralytics>=8.2,<9.0",
  "lap>=0.5.12",
  "opencv-python==4.9.0.80",
  "numpy<2",
  "torch==2.2.2",
  "torchvision==0.17.2",
  "openai>=1.0,<2.0",
  "aiohttp>=3.9,<4.0",
  "onnxruntime>=1.18,<2.0",
  "PyAudio>=0.2.14,<1.0",
  "websockets>=12,<16",
]

[project.scripts]
e-agent = "agent.e_agent:main"
robot-agent = "agent.runtime_cli:main"
robot-agent-perception = "world.perception.cli:main"
robot-agent-environment-writer = "world.write_environment:main"
robot-agent-tracking-benchmark = "capabilities.tracking.benchmark:main"

[dependency-groups]
dev = [
  "pytest>=7.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "world*", "capabilities*", "interfaces*", "skills*", "stt*"]

[tool.uv]
default-groups = ["dev"]
